markdown-pages/zh/tidb/release-8.1/TOC.md
<!-- markdownlint-disable MD007 -->
<!-- markdownlint-disable MD041 -->

- [文档中心](https://docs.pingcap.com/zh)
- 关于 TiDB
  - [TiDB 简介](/overview.md)
  - [TiDB 8.1 Release Notes](/releases/release-8.1.0.md)
  - [功能概览](/basic-features.md)
  - [与 MySQL 的兼容性](/mysql-compatibility.md)
  - [使用限制](/tidb-limitations.md)
  - [荣誉列表](/credits.md)
  - [路线图](https://docs.pingcap.com/zh/tidb/dev/tidb-roadmap)
- 快速上手
  - [快速上手 TiDB](/quick-start-with-tidb.md)
  - [快速上手 HTAP](/quick-start-with-htap.md)
  - [SQL 基本操作](/basic-sql-operations.md)
  - [深入探索 HTAP](/explore-htap.md)
- 应用开发
  - [概览](/develop/dev-guide-overview.md)
  - 快速开始
    - [使用 TiDB Cloud Serverless 构建 TiDB 集群](/develop/dev-guide-build-cluster-in-cloud.md)
    - [使用 TiDB 的增删改查 SQL](/develop/dev-guide-tidb-crud-sql.md)
  - 示例程序
    - Java
      - [JDBC](/develop/dev-guide-sample-application-java-jdbc.md)
      - [MyBatis](/develop/dev-guide-sample-application-java-mybatis.md)
      - [Hibernate](/develop/dev-guide-sample-application-java-hibernate.md)
      - [Spring Boot](/develop/dev-guide-sample-application-java-spring-boot.md)
    - Go
      - [Go-MySQL-Driver](/develop/dev-guide-sample-application-golang-sql-driver.md)
      - [GORM](/develop/dev-guide-sample-application-golang-gorm.md)
    - Python
      - [mysqlclient](/develop/dev-guide-sample-application-python-mysqlclient.md)
      - [MySQL Connector/Python](/develop/dev-guide-sample-application-python-mysql-connector.md)
      - [PyMySQL](/develop/dev-guide-sample-application-python-pymysql.md)
      - [SQLAlchemy](/develop/dev-guide-sample-application-python-sqlalchemy.md)
      - [peewee](/develop/dev-guide-sample-application-python-peewee.md)
      - [Django](/develop/dev-guide-sample-application-python-django.md)
    - Node.js
      - [node-mysql2](/develop/dev-guide-sample-application-nodejs-mysql2.md)
      - [mysql.js](/develop/dev-guide-sample-application-nodejs-mysqljs.md)
      - [Prisma](/develop/dev-guide-sample-application-nodejs-prisma.md)
      - [Sequelize](/develop/dev-guide-sample-application-nodejs-sequelize.md)
      - [TypeORM](/develop/dev-guide-sample-application-nodejs-typeorm.md)
      - [Next.js](/develop/dev-guide-sample-application-nextjs.md)
      - [AWS Lambda](/develop/dev-guide-sample-application-aws-lambda.md)
    - Ruby
      - [mysql2](/develop/dev-guide-sample-application-ruby-mysql2.md)
      - [Rails](/develop/dev-guide-sample-application-ruby-rails.md)
    - C#
      - [C#](/develop/dev-guide-sample-application-cs.md)
  - 连接到 TiDB
    - GUI 数据库工具
      - [MySQL Workbench](/develop/dev-guide-gui-mysql-workbench.md)
      - [Navicat](/develop/dev-guide-gui-navicat.md)
    - [选择驱动或 ORM 框架](/develop/dev-guide-choose-driver-or-orm.md)
    - [连接到 TiDB](/develop/dev-guide-connect-to-tidb.md)
    - [连接池与连接参数](/develop/dev-guide-connection-parameters.md)
  - 数据库模式设计
    - [概览](/develop/dev-guide-schema-design-overview.md)
    - [创建数据库](/develop/dev-guide-create-database.md)
    - [创建表](/develop/dev-guide-create-table.md)
    - [创建二级索引](/develop/dev-guide-create-secondary-indexes.md)
  - 数据写入
    - [插入数据](/develop/dev-guide-insert-data.md)
    - [更新数据](/develop/dev-guide-update-data.md)
    - [删除数据](/develop/dev-guide-delete-data.md)
    - [使用 TTL (Time to Live) 定期删除过期数据](/time-to-live.md)
    - [预处理语句](/develop/dev-guide-prepared-statement.md)
  - 数据读取
    - [单表读取](/develop/dev-guide-get-data-from-single-table.md)
    - [多表连接查询](/develop/dev-guide-join-tables.md)
    - [子查询](/develop/dev-guide-use-subqueries.md)
    - [查询结果分页](/develop/dev-guide-paginate-results.md)
    - [视图](/develop/dev-guide-use-views.md)
    - [临时表](/develop/dev-guide-use-temporary-tables.md)
    - [公共表表达式](/develop/dev-guide-use-common-table-expression.md)
    - 读取副本数据
      - [Follower Read](/develop/dev-guide-use-follower-read.md)
      - [Stale Read](/develop/dev-guide-use-stale-read.md)
    - [HTAP 查询](/develop/dev-guide-hybrid-oltp-and-olap-queries.md)
  - 事务
    - [概览](/develop/dev-guide-transaction-overview.md)
    - [乐观事务和悲观事务](/develop/dev-guide-optimistic-and-pessimistic-transaction.md)
    - [事务限制](/develop/dev-guide-transaction-restraints.md)
    - [事务错误处理](/develop/dev-guide-transaction-troubleshoot.md)
  - 优化 SQL 性能
    - [概览](/develop/dev-guide-optimize-sql-overview.md)
    - [SQL 性能调优](/develop/dev-guide-optimize-sql.md)
    - [性能调优最佳实践](/develop/dev-guide-optimize-sql-best-practices.md)
    - [索引的最佳实践](/develop/dev-guide-index-best-practice.md)
    - 其他优化
      - [避免隐式类型转换](/develop/dev-guide-implicit-type-conversion.md)
      - [唯一序列号生成方案](/develop/dev-guide-unique-serial-number-generation.md)
  - 故障诊断
    - [SQL 或事务问题](/develop/dev-guide-troubleshoot-overview.md)
    - [结果集不稳定](/develop/dev-guide-unstable-result-set.md)
    - [超时](/develop/dev-guide-timeouts-in-tidb.md)
  - 引用文档
    - [Bookshop 示例应用](/develop/dev-guide-bookshop-schema-design.md)
    - 规范
      - [命名规范](/develop/dev-guide-object-naming-guidelines.md)
      - [SQL 开发规范](/develop/dev-guide-sql-development-specification.md)
  - 云原生开发环境
    - [Gitpod](/develop/dev-guide-playground-gitpod.md)
  - 第三方工具支持
    - [TiDB 支持的第三方工具](/develop/dev-guide-third-party-support.md)
    - [已知的第三方工具兼容问题](/develop/dev-guide-third-party-tools-compatibility.md)
    - [ProxySQL 集成指南](/develop/dev-guide-proxysql-integration.md)
- 部署标准集群
  - [软硬件环境需求](/hardware-and-software-requirements.md)
  - [环境与系统配置检查](/check-before-deployment.md)
  - 规划集群拓扑
    - [最小部署拓扑结构](/minimal-deployment-topology.md)
    - [TiFlash 部署拓扑](/tiflash-deployment-topology.md)
    - [TiProxy 部署拓扑](/tiproxy/tiproxy-deployment-topology.md)
    - [TiCDC 部署拓扑](/ticdc-deployment-topology.md)
    - [TiDB Binlog 部署拓扑](/tidb-binlog-deployment-topology.md)
    - [TiSpark 部署拓扑](/tispark-deployment-topology.md)
    - [跨机房部署拓扑结构](/geo-distributed-deployment-topology.md)
    - [混合部署拓扑结构](/hybrid-deployment-topology.md)
  - 安装与启动
    - [使用 TiUP 部署](/production-deployment-using-tiup.md)
    - [在 Kubernetes 上部署](/tidb-in-kubernetes.md)
  - [验证集群状态](/post-installation-check.md)
  - 测试集群性能
    - [用 Sysbench 测试 TiDB](/benchmark/benchmark-tidb-using-sysbench.md)
    - [对 TiDB 进行 TPC-C 测试](/benchmark/benchmark-tidb-using-tpcc.md)
    - [对 TiDB 进行 CH-benCHmark 测试](/benchmark/benchmark-tidb-using-ch.md)
- 数据迁移
  - [数据迁移概述](/migration-overview.md)
  - [数据迁移工具](/migration-tools.md)
  - [数据导入最佳实践](/tidb-lightning/data-import-best-practices.md)
  - 数据迁移场景
    - [从 Aurora 迁移数据到 TiDB](/migrate-aurora-to-tidb.md)
    - [从小数据量 MySQL 迁移数据到 TiDB](/migrate-small-mysql-to-tidb.md)
    - [从大数据量 MySQL 迁移数据到 TiDB](/migrate-large-mysql-to-tidb.md)
    - [从小数据量分库分表 MySQL 合并迁移数据到 TiDB](/migrate-small-mysql-shards-to-tidb.md)
    - [从大数据量分库分表 MySQL 合并迁移数据到 TiDB](/migrate-large-mysql-shards-to-tidb.md)
    - [从 MariaDB 迁移数据到 TiDB](/migrate-from-mariadb.md)
    - [从 CSV 文件迁移数据到 TiDB](/migrate-from-csv-files-to-tidb.md)
    - [从 SQL 文件迁移数据到 TiDB](/migrate-from-sql-files-to-tidb.md)
    - [从 Parquet 文件迁移数据到 TiDB](/migrate-from-parquet-files-to-tidb.md)
    - [从 TiDB 集群迁移数据至另一 TiDB 集群](/migrate-from-tidb-to-tidb.md)
    - [从 TiDB 集群迁移数据至兼容 MySQL 的数据库](/migrate-from-tidb-to-mysql.md)
  - 复杂迁移场景
    - [上游使用 pt/gh-ost 工具的持续同步场景](/migrate-with-pt-ghost.md)
    - [下游存在更多列的迁移场景](/migrate-with-more-columns-downstream.md)
    - [如何根据类型或 DDL 内容过滤 binlog 事件](/filter-binlog-event.md)
    - [如何通过 SQL 表达式过滤 DML binlog 事件](/filter-dml-event.md)
- 数据集成
  - [数据集成概述](/integration-overview.md)
  - 数据集成场景
    - [与 Confluent Cloud 和 Snowflake 进行数据集成](/ticdc/integrate-confluent-using-ticdc.md)
    - [与 Apache Kafka 和 Apache Flink 进行数据集成](/replicate-data-to-kafka.md)
- 运维操作
  - 安全加固
    - [TiDB 安全配置最佳实践](/best-practices-for-security-configuration.md)
    - [为 TiDB 客户端服务端间通信开启加密传输](/enable-tls-between-clients-and-servers.md)
    - [为 TiDB 组件间通信开启加密传输](/enable-tls-between-components.md)
    - [生成自签名证书](/generate-self-signed-certificates.md)
    - [静态加密](/encryption-at-rest.md)
    - [为 TiDB 落盘文件开启加密](/enable-disk-spill-encrypt.md)
    - [日志脱敏](/log-redaction.md)
  - 升级 TiDB 版本
    - [使用 TiUP 升级](/upgrade-tidb-using-tiup.md)
    - [使用 TiDB Operator](https://docs.pingcap.com/zh/tidb-in-kubernetes/stable/upgrade-a-tidb-cluster)
    - [平滑升级 TiDB](/smooth-upgrade-tidb.md)
    - [迁移升级 TiDB](/tidb-upgrade-migration-guide.md)
    - [TiFlash 升级帮助](/tiflash-upgrade-guide.md)
  - 扩缩容
    - [使用 TiUP（推荐）](/scale-tidb-using-tiup.md)
    - [使用 TiDB Operator](https://docs.pingcap.com/zh/tidb-in-kubernetes/stable/scale-a-tidb-cluster)
  - 备份与恢复
    - [备份与恢复概述](/br/backup-and-restore-overview.md)
    - 架构设计
      - [架构概述](/br/backup-and-restore-design.md)
      - [快照备份与恢复架构](/br/br-snapshot-architecture.md)
      - [日志备份与 PITR 架构](/br/br-log-architecture.md)
    - 使用 BR 进行备份与恢复
      - [使用概述](/br/br-use-overview.md)
      - [快照备份与恢复](/br/br-snapshot-guide.md)
      - [日志备份与 PITR](/br/br-pitr-guide.md)
      - [实践示例](/br/backup-and-restore-use-cases.md)
      - [备份存储](/br/backup-and-restore-storages.md)
    - br cli 命令手册
      - [命令概述](/br/use-br-command-line-tool.md)
      - [快照备份与恢复命令手册](/br/br-snapshot-manual.md)
      - [日志备份与 PITR 命令手册](/br/br-pitr-manual.md)
    - 参考指南
      - BR 特性
        - [自动调节](/br/br-auto-tune.md)
        - [批量建表](/br/br-batch-create-table.md)
        - [断点备份](/br/br-checkpoint-backup.md)
        - [断点恢复](/br/br-checkpoint-restore.md)
      - [使用 Dumpling 和 TiDB Lightning 备份与恢复](/backup-and-restore-using-dumpling-lightning.md)
      - [备份与恢复 RawKV](/br/rawkv-backup-and-restore.md)
      - [增量备份与恢复](/br/br-incremental-guide.md)
  - 集群容灾
    - [容灾方案介绍](/dr-solution-introduction.md)
    - [基于主备集群的容灾](/dr-secondary-cluster.md)
    - [基于多副本的单集群容灾](/dr-multi-replica.md)
    - [基于备份与恢复的容灾](/dr-backup-restore.md)
  - [使用资源管控 (Resource Control) 实现资源隔离](/tidb-resource-control.md)
  - [修改时区](/configure-time-zone.md)
  - [日常巡检](/daily-check.md)
  - [TiFlash 常用运维操作](/tiflash/maintain-tiflash.md)
  - [使用 TiUP 运维集群](/maintain-tidb-using-tiup.md)
  - [在线修改集群配置](/dynamic-config.md)
  - [在线有损恢复](/online-unsafe-recovery.md)
  - [搭建双集群主从复制](/replicate-between-primary-and-secondary-clusters.md)
- 监控与告警
  - [监控框架概述](/tidb-monitoring-framework.md)
  - [监控 API](/tidb-monitoring-api.md)
  - [手动部署监控](/deploy-monitoring-services.md)
  - [升级监控组件](/upgrade-monitoring-services.md)
  - TiDB Dashboard
    - [简介](/dashboard/dashboard-intro.md)
    - 运维
      - [部署](/dashboard/dashboard-ops-deploy.md)
      - [反向代理](/dashboard/dashboard-ops-reverse-proxy.md)
      - [用户管理](/dashboard/dashboard-user.md)
      - [安全](/dashboard/dashboard-ops-security.md)
    - [访问](/dashboard/dashboard-access.md)
    - [概况页面](/dashboard/dashboard-overview.md)
    - [集群信息页面](/dashboard/dashboard-cluster-info.md)
    - [Top SQL 页面](/dashboard/top-sql.md)
    - [流量可视化页面](/dashboard/dashboard-key-visualizer.md)
    - [监控关系图](/dashboard/dashboard-metrics-relation.md)
    - SQL 语句分析
      - [列表页面](/dashboard/dashboard-statement-list.md)
      - [执行详情页面](/dashboard/dashboard-statement-details.md)
    - [慢查询页面](/dashboard/dashboard-slow-query.md)
    - 集群诊断页面
      - [访问](/dashboard/dashboard-diagnostics-access.md)
      - [查看报告](/dashboard/dashboard-diagnostics-report.md)
      - [使用示例](/dashboard/dashboard-diagnostics-usage.md)
    - [监控指标页面](/dashboard/dashboard-monitoring.md)
    - [日志搜索页面](/dashboard/dashboard-log-search.md)
    - [资源管控页面](/dashboard/dashboard-resource-manager.md)
    - 实例性能分析
      - [手动分析页面](/dashboard/dashboard-profiling.md)
      - [持续分析页面](/dashboard/continuous-profiling.md)
    - 会话管理与配置
      - [分享会话](/dashboard/dashboard-session-share.md)
      - [配置 SSO 登录](/dashboard/dashboard-session-sso.md)
    - [常见问题](/dashboard/dashboard-faq.md)
  - [将 Grafana 监控数据导出成快照](/exporting-grafana-snapshots.md)
  - [TiDB 集群报警规则与处理方法](/alert-rules.md)
  - [TiFlash 报警规则与处理方法](/tiflash/tiflash-alert-rules.md)
  - [自定义监控组件的配置](/tiup/customized-montior-in-tiup-environment.md)
  - [BR 监控告警](/br/br-monitoring-and-alert.md)
- 故障诊断
  - 故障诊断问题汇总
    - [TiDB 集群问题导图](/tidb-troubleshooting-map.md)
    - [TiDB 集群常见问题](/troubleshoot-tidb-cluster.md)
    - [TiFlash 常见问题](/tiflash/troubleshoot-tiflash.md)
  - 故障场景
    - 慢查询
      - [定位慢查询](/identify-slow-queries.md)
      - [分析慢查询](/analyze-slow-queries.md)
    - [TiDB OOM 故障排查](/troubleshoot-tidb-oom.md)
    - [热点问题处理](/troubleshoot-hot-spot-issues.md)
    - [读写延迟增加](/troubleshoot-cpu-issues.md)
    - [写冲突与写性能下降](/troubleshoot-write-conflicts.md)
    - [磁盘 I/O 过高](/troubleshoot-high-disk-io.md)
    - [锁冲突与 TTL 超时](/troubleshoot-lock-conflicts.md)
    - [数据索引不一致报错](/troubleshoot-data-inconsistency-errors.md)
  - 故障诊断方法
    - [通过 SQL 诊断获取集群诊断信息](/information-schema/information-schema-sql-diagnostics.md)
    - [通过 Statement Summary 排查 SQL 性能问题](/statement-summary-tables.md)
    - [使用 Top SQL 定位系统资源消耗过多的查询](/dashboard/top-sql.md)
    - [通过日志定位消耗系统资源多的查询](/identify-expensive-queries.md)
    - [保存和恢复集群现场信息](/sql-plan-replayer.md)
    - [理解 TiKV 中的 Stale Read 和 safe-ts](/troubleshoot-stale-read.md)
  - [获取支持](/support.md)
- 性能调优
  - 优化手册
    - [优化概述](/performance-tuning-overview.md)
    - [优化方法](/performance-tuning-methods.md)
    - [OLTP 负载性能优化实践](/performance-tuning-practices.md)
    - [TiFlash 性能分析方法](/tiflash-performance-tuning-methods.md)
    - [TiCDC 性能分析方法](/ticdc-performance-tuning-methods.md)
    - [延迟的拆解分析](/latency-breakdown.md)
    - [在公有云上部署 TiDB 的最佳实践](/best-practices-on-public-cloud.md)
  - 配置调优
      - [操作系统性能参数调优](/tune-operating-system.md)
      - [TiDB 内存调优](/configure-memory-usage.md)
      - [TiKV 线程调优](/tune-tikv-thread-performance.md)
      - [TiKV 内存调优](/tune-tikv-memory-performance.md)
      - [TiKV Follower Read](/follower-read.md)
      - [Region 性能调优](/tune-region-performance.md)
      - [TiFlash 调优](/tiflash/tune-tiflash-performance.md)
      - [下推计算结果缓存](/coprocessor-cache.md)
      - 垃圾回收 (GC)
        - [GC 机制简介](/garbage-collection-overview.md)
        - [GC 配置](/garbage-collection-configuration.md)
  - SQL 性能调优
    - [SQL 性能调优概览](/sql-tuning-overview.md)
    - 理解 TiDB 执行计划
      - [TiDB 执行计划概览](/explain-overview.md)
      - [使用 `EXPLAIN` 解读执行计划](/explain-walkthrough.md)
      - [MPP 模式查询的执行计划](/explain-mpp.md)
      - [索引查询的执行计划](/explain-indexes.md)
      - [Join 查询的执行计划](/explain-joins.md)
      - [子查询的执行计划](/explain-subqueries.md)
      - [聚合查询的执行计划](/explain-aggregation.md)
      - [视图查询的执行计划](/explain-views.md)
      - [分区查询的执行计划](/explain-partitions.md)
      - [开启 IndexMerge 查询的执行计划](/explain-index-merge.md)
    - SQL 优化流程
      - [SQL 优化流程概览](/sql-optimization-concepts.md)
      - 逻辑优化
        - [逻辑优化概览](/sql-logical-optimization.md)
        - [子查询相关的优化](/subquery-optimization.md)
        - [列裁剪](/column-pruning.md)
        - [关联子查询去关联](/correlated-subquery-optimization.md)
        - [Max/Min 消除](/max-min-eliminate.md)
        - [谓词下推](/predicate-push-down.md)
        - [分区裁剪](/partition-pruning.md)
        - [TopN 和 Limit 下推](/topn-limit-push-down.md)
        - [Join Reorder](/join-reorder.md)
        - [从窗口函数中推导 TopN 或 Limit](/derive-topn-from-window.md)
      - 物理优化
        - [物理优化概览](/sql-physical-optimization.md)
        - [索引的选择](/choose-index.md)
        - [常规统计信息](/statistics.md)
        - [扩展统计信息](/extended-statistics.md)
        - [错误索引的解决方案](/wrong-index-solution.md)
        - [Distinct 优化](/agg-distinct-optimization.md)
        - [代价模型](/cost-model.md)
        - [Runtime Filter](/runtime-filter.md)
      - [Prepare 语句执行计划缓存](/sql-prepared-plan-cache.md)
      - [非 Prepare 语句执行计划缓存](/sql-non-prepared-plan-cache.md)
    - 控制执行计划
      - [控制执行计划概览](/control-execution-plan.md)
      - [Optimizer Hints](/optimizer-hints.md)
      - [执行计划管理](/sql-plan-management.md)
      - [优化规则及表达式下推的黑名单](/blocklist-control-plan.md)
      - [Optimizer Fix Controls](/optimizer-fix-controls.md)
- 教程
  - [单区域多 AZ 部署](/multi-data-centers-in-one-city-deployment.md)
  - [双区域多 AZ 部署](/three-data-centers-in-two-cities-deployment.md)
  - [单区域双 AZ 部署](/two-data-centers-in-one-city-deployment.md)
  - 读取历史数据
    - 使用 Stale Read 功能读取历史数据（推荐）
      - [Stale Read 使用场景介绍](/stale-read.md)
      - [使用 `AS OF TIMESTAMP` 语法读取历史数据](/as-of-timestamp.md)
      - [使用系统变量 `tidb_read_staleness` 读取历史数据](/tidb-read-staleness.md)
      - [使用系统变量 `tidb_external_ts` 读取历史数据](/tidb-external-ts.md)
    - [使用系统变量 `tidb_snapshot` 读取历史数据](/read-historical-data.md)
  - 最佳实践
    - [TiDB 最佳实践](/best-practices/tidb-best-practices.md)
    - [Java 应用开发最佳实践](/best-practices/java-app-best-practices.md)
    - [HAProxy 最佳实践](/best-practices/haproxy-best-practices.md)
    - [高并发写入场景最佳实践](/best-practices/high-concurrency-best-practices.md)
    - [Grafana 监控最佳实践](/best-practices/grafana-monitor-best-practices.md)
    - [PD 调度策略最佳实践](/best-practices/pd-scheduling-best-practices.md)
    - [海量 Region 集群调优](/best-practices/massive-regions-best-practices.md)
    - [三节点混合部署最佳实践](/best-practices/three-nodes-hybrid-deployment.md)
    - [在三数据中心下就近读取数据](/best-practices/three-dc-local-read.md)
    - [使用 UUID](/best-practices/uuid.md)
    - [只读存储节点最佳实践](/best-practices/readonly-nodes.md)
  - [Placement Rules 使用文档](/configure-placement-rules.md)
  - [Load Base Split 使用文档](/configure-load-base-split.md)
  - [Store Limit 使用文档](/configure-store-limit.md)
  - [DDL 执行原理及最佳实践](/ddl-introduction.md)
  - [PD 微服务使用文档](/pd-microservices.md)
- TiDB 工具
  - [功能概览](/ecosystem-tool-user-guide.md)
  - [使用场景](/ecosystem-tool-user-case.md)
  - [工具下载](/download-ecosystem-tools.md)
  - TiUP
    - [文档地图](/tiup/tiup-documentation-guide.md)
    - [概览](/tiup/tiup-overview.md)
    - [术语及核心概念](/tiup/tiup-terminology-and-concepts.md)
    - [TiUP 组件管理](/tiup/tiup-component-management.md)
    - [FAQ](/tiup/tiup-faq.md)
    - [故障排查](/tiup/tiup-troubleshooting-guide.md)
    - TiUP 命令参考手册
      - [命令概览](/tiup/tiup-reference.md)
      - TiUP 命令
        - [tiup clean](/tiup/tiup-command-clean.md)
        - [tiup completion](/tiup/tiup-command-completion.md)
        - [tiup env](/tiup/tiup-command-env.md)
        - [tiup help](/tiup/tiup-command-help.md)
        - [tiup install](/tiup/tiup-command-install.md)
        - [tiup list](/tiup/tiup-command-list.md)
        - tiup mirror
          - [tiup mirror 概览](/tiup/tiup-command-mirror.md)
          - [tiup mirror clone](/tiup/tiup-command-mirror-clone.md)
          - [tiup mirror genkey](/tiup/tiup-command-mirror-genkey.md)
          - [tiup mirror grant](/tiup/tiup-command-mirror-grant.md)
          - [tiup mirror init](/tiup/tiup-command-mirror-init.md)
          - [tiup mirror merge](/tiup/tiup-command-mirror-merge.md)
          - [tiup mirror modify](/tiup/tiup-command-mirror-modify.md)
          - [tiup mirror publish](/tiup/tiup-command-mirror-publish.md)
          - [tiup mirror rotate](/tiup/tiup-command-mirror-rotate.md)
          - [tiup mirror set](/tiup/tiup-command-mirror-set.md)
          - [tiup mirror sign](/tiup/tiup-command-mirror-sign.md)
        - [tiup status](/tiup/tiup-command-status.md)
        - [tiup telemetry](/tiup/tiup-command-telemetry.md)
        - [tiup uninstall](/tiup/tiup-command-uninstall.md)
        - [tiup update](/tiup/tiup-command-update.md)
      - TiUP Cluster 命令
        - [TiUP Cluster 命令概览](/tiup/tiup-component-cluster.md)
        - [tiup cluster audit](/tiup/tiup-component-cluster-audit.md)
        - [tiup cluster audit cleanup](/tiup/tiup-component-cluster-audit-cleanup.md)
        - [tiup cluster check](/tiup/tiup-component-cluster-check.md)
        - [tiup cluster clean](/tiup/tiup-component-cluster-clean.md)
        - [tiup cluster deploy](/tiup/tiup-component-cluster-deploy.md)
        - [tiup cluster destroy](/tiup/tiup-component-cluster-destroy.md)
        - [tiup cluster disable](/tiup/tiup-component-cluster-disable.md)
        - [tiup cluster display](/tiup/tiup-component-cluster-display.md)
        - [tiup cluster edit-config](/tiup/tiup-component-cluster-edit-config.md)
        - [tiup cluster enable](/tiup/tiup-component-cluster-enable.md)
        - [tiup cluster help](/tiup/tiup-component-cluster-help.md)
        - [tiup cluster import](/tiup/tiup-component-cluster-import.md)
        - [tiup cluster list](/tiup/tiup-component-cluster-list.md)
        - [tiup cluster meta backup](/tiup/tiup-component-cluster-meta-backup.md)
        - [tiup cluster meta restore](/tiup/tiup-component-cluster-meta-restore.md)
        - [tiup cluster patch](/tiup/tiup-component-cluster-patch.md)
        - [tiup cluster prune](/tiup/tiup-component-cluster-prune.md)
        - [tiup cluster reload](/tiup/tiup-component-cluster-reload.md)
        - [tiup cluster rename](/tiup/tiup-component-cluster-rename.md)
        - [tiup cluster replay](/tiup/tiup-component-cluster-replay.md)
        - [tiup cluster restart](/tiup/tiup-component-cluster-restart.md)
        - [tiup cluster scale-in](/tiup/tiup-component-cluster-scale-in.md)
        - [tiup cluster scale-out](/tiup/tiup-component-cluster-scale-out.md)
        - [tiup cluster start](/tiup/tiup-component-cluster-start.md)
        - [tiup cluster stop](/tiup/tiup-component-cluster-stop.md)
        - [tiup cluster template](/tiup/tiup-component-cluster-template.md)
        - [tiup cluster upgrade](/tiup/tiup-component-cluster-upgrade.md)
      - TiUP DM 命令
        - [TiUP DM 命令概览](/tiup/tiup-component-dm.md)
        - [tiup dm audit](/tiup/tiup-component-dm-audit.md)
        - [tiup dm deploy](/tiup/tiup-component-dm-deploy.md)
        - [tiup dm destroy](/tiup/tiup-component-dm-destroy.md)
        - [tiup dm disable](/tiup/tiup-component-dm-disable.md)
        - [tiup dm display](/tiup/tiup-component-dm-display.md)
        - [tiup dm edit-config](/tiup/tiup-component-dm-edit-config.md)
        - [tiup dm enable](/tiup/tiup-component-dm-enable.md)
        - [tiup dm help](/tiup/tiup-component-dm-help.md)
        - [tiup dm import](/tiup/tiup-component-dm-import.md)
        - [tiup dm list](/tiup/tiup-component-dm-list.md)
        - [tiup dm patch](/tiup/tiup-component-dm-patch.md)
        - [tiup dm prune](/tiup/tiup-component-dm-prune.md)
        - [tiup dm reload](/tiup/tiup-component-dm-reload.md)
        - [tiup dm replay](/tiup/tiup-component-dm-replay.md)
        - [tiup dm restart](/tiup/tiup-component-dm-restart.md)
        - [tiup dm scale-in](/tiup/tiup-component-dm-scale-in.md)
        - [tiup dm scale-out](/tiup/tiup-component-dm-scale-out.md)
        - [tiup dm start](/tiup/tiup-component-dm-start.md)
        - [tiup dm stop](/tiup/tiup-component-dm-stop.md)
        - [tiup dm template](/tiup/tiup-component-dm-template.md)
        - [tiup dm upgrade](/tiup/tiup-component-dm-upgrade.md)
    - [TiDB 集群拓扑文件配置](/tiup/tiup-cluster-topology-reference.md)
    - [DM 集群拓扑文件配置](/tiup/tiup-dm-topology-reference.md)
    - [TiUP 镜像参考指南](/tiup/tiup-mirror-reference.md)
    - TiUP 组件文档
      - [tiup-playground 运行本地测试集群](/tiup/tiup-playground.md)
      - [tiup-cluster 部署运维生产集群](/tiup/tiup-cluster.md)
      - [使用 no-sudo 模式部署运维生产集群](/tiup/tiup-cluster-no-sudo-mode.md)
      - [tiup-mirror 定制离线镜像](/tiup/tiup-mirror.md)
      - [tiup-bench 进行 TPCC/TPCH 压力测试](/tiup/tiup-bench.md)
  - [TiDB Operator](/tidb-operator-overview.md)
  - TiDB Data Migration
    - [关于 Data Migration](/dm/dm-overview.md)
    - [架构简介](/dm/dm-arch.md)
    - [快速开始](/dm/quick-start-with-dm.md)
    - [最佳实践](/dm/dm-best-practices.md)
    - 部署 DM 集群
      - [软硬件要求](/dm/dm-hardware-and-software-requirements.md)
      - [使用 TiUP 联网部署（推荐）](/dm/deploy-a-dm-cluster-using-tiup.md)
      - [使用 TiUP 离线部署](/dm/deploy-a-dm-cluster-using-tiup-offline.md)
      - [使用 Binary 部署](/dm/deploy-a-dm-cluster-using-binary.md)
      - [在 Kubernetes 环境中部署](https://docs.pingcap.com/zh/tidb-in-kubernetes/dev/deploy-tidb-dm)
    - 入门指南
      - [创建数据源](/dm/quick-start-create-source.md)
      - [数据源操作](/dm/dm-manage-source.md)
      - [任务配置向导](/dm/dm-task-configuration-guide.md)
      - [分库分表合并](/dm/dm-shard-merge.md)
      - [表路由](/dm/dm-table-routing.md)
      - [黑白名单](/dm/dm-block-allow-table-lists.md)
      - [过滤 binlog 事件](/dm/dm-binlog-event-filter.md)
      - [通过 SQL 表达式过滤 DML](/dm/feature-expression-filter.md)
      - [Online DDL 工具支持](/dm/dm-online-ddl-tool-support.md)
      - [自定义加解密 key](/dm/dm-customized-secret-key.md)
      - 迁移任务操作
        - [任务前置检查](/dm/dm-precheck.md)
        - [创建任务](/dm/dm-create-task.md)
        - [查询状态](/dm/dm-query-status.md)
        - [暂停任务](/dm/dm-pause-task.md)
        - [恢复任务](/dm/dm-resume-task.md)
        - [停止任务](/dm/dm-stop-task.md)
    - 进阶教程
      - 分库分表合并迁移
        - [概述](/dm/feature-shard-merge.md)
        - [悲观模式](/dm/feature-shard-merge-pessimistic.md)
        - [乐观模式](/dm/feature-shard-merge-optimistic.md)
        - [手动处理 Sharding DDL Lock](/dm/manually-handling-sharding-ddl-locks.md)
      - [迁移使用 GH-ost/PT-osc 的数据源](/dm/feature-online-ddl.md)
      - [上下游列数量不一致的迁移](/migrate-with-more-columns-downstream.md)
      - [增量数据校验](/dm/dm-continuous-data-validation.md)
    - 运维管理
      - 集群版本升级
        - [使用 TiUP 运维集群（推荐）](/dm/maintain-dm-using-tiup.md)
        - [1.0.x 到 2.0+ 手动升级](/dm/manually-upgrade-dm-1.0-to-2.0.md)
        - [在线应用 Hotfix 到 DM 集群](/tiup/tiup-component-dm-patch.md)
      - 集群运维工具
        - [使用 WebUI 管理迁移任务](/dm/dm-webui-guide.md)
        - [使用 dmctl 管理迁移任务](/dm/dmctl-introduction.md)
      - 性能调优
        - [性能数据](/dm/dm-benchmark-v5.4.0.md)
        - [配置调优](/dm/dm-tune-configuration.md)
        - [如何进行压力测试](/dm/dm-performance-test.md)
        - [性能问题及处理方法](/dm/dm-handle-performance-issues.md)
      - 数据源管理
        - [变更同步的数据源地址](/dm/usage-scenario-master-slave-switch.md)
      - 任务管理
        - [处理出错的 DDL 语句](/dm/handle-failed-ddl-statements.md)
        - [管理迁移表的表结构](/dm/dm-manage-schema.md)
      - [导出和导入集群的数据源和任务配置](/dm/dm-export-import-config.md)
      - [处理告警](/dm/dm-handle-alerts.md)
      - [日常巡检](/dm/dm-daily-check.md)
    - 参考手册
      - 架构组件
        - [DM-worker 说明](/dm/dm-worker-intro.md)
        - [安全模式](/dm/dm-safe-mode.md)
        - [Relay Log](/dm/relay-log.md)
      - 运行机制
        - [DML 同步机制](/dm/dm-dml-replication-logic.md)
        - [高可用机制](/dm/dm-high-availability.md)
        - [DDL 特殊处理说明](/dm/dm-ddl-compatible.md)
      - 命令行
        - [DM-master & DM-worker](/dm/dm-command-line-flags.md)
      - 配置文件
        - [概述](/dm/dm-config-overview.md)
        - [数据源配置](/dm/dm-source-configuration-file.md)
        - [迁移任务配置](/dm/task-configuration-file-full.md)
        - [DM-master 配置](/dm/dm-master-configuration-file.md)
        - [DM-worker 配置](/dm/dm-worker-configuration-file.md)
        - [Table Selector](/dm/table-selector.md)
      - [OpenAPI](/dm/dm-open-api.md)
      - [兼容性目录](/dm/dm-compatibility-catalog.md)
      - 安全
        - [为 DM 的连接开启加密传输](/dm/dm-enable-tls.md)
        - [生成自签名证书](/dm/dm-generate-self-signed-certificates.md)
      - 监控告警
        - [监控指标](/dm/monitor-a-dm-cluster.md)
        - [告警信息](/dm/dm-alert-rules.md)
      - [错误码](/dm/dm-error-handling.md#常见故障处理方法)
      - [术语表](/dm/dm-glossary.md)
      - 使用示例
        - [使用 DM 迁移数据](/dm/migrate-data-using-dm.md)
        - [快速创建迁移任务](/dm/quick-start-create-task.md)
        - [分表合并数据迁移最佳实践](/dm/shard-merge-best-practices.md)
      - 异常解决
        - [常见问题](/dm/dm-faq.md)
        - [错误处理及恢复](/dm/dm-error-handling.md)
      - [版本发布历史](/dm/dm-release-notes.md)
  - TiDB Lightning
    - [概述](/tidb-lightning/tidb-lightning-overview.md)
    - [`IMPORT INTO` 和 TiDB Lightning 对比](/tidb-lightning/import-into-vs-tidb-lightning.md)
    - [`IMPORT INTO` 和 TiDB Lightning 与日志备份和 TiCDC 的兼容性](/tidb-lightning/tidb-lightning-compatibility-and-scenarios.md)
    - [快速上手](/get-started-with-tidb-lightning.md)
    - [部署 TiDB Lightning](/tidb-lightning/deploy-tidb-lightning.md)
    - [目标数据库要求](/tidb-lightning/tidb-lightning-requirements.md)
    - 数据源
      - [文件匹配规则](/tidb-lightning/tidb-lightning-data-source.md)
      - [表库重命名](/tidb-lightning/tidb-lightning-data-source.md#表库重命名)
      - [CSV](/tidb-lightning/tidb-lightning-data-source.md#csv)
      - [SQL](/tidb-lightning/tidb-lightning-data-source.md#sql)
      - [Parquet](/tidb-lightning/tidb-lightning-data-source.md#parquet)
      - [压缩文件](/tidb-lightning/tidb-lightning-data-source.md#压缩文件)
      - [自定义文件匹配](/tidb-lightning/tidb-lightning-data-source.md#自定义文件匹配)
      - [从 Amazon S3 导入数据](/tidb-lightning/tidb-lightning-data-source.md#从-amazon-s3-导入数据)
    - 物理导入模式
      - [概述](/tidb-lightning/tidb-lightning-physical-import-mode.md)
      - [必要条件及限制](/tidb-lightning/tidb-lightning-physical-import-mode.md#必要条件及限制)
      - [配置及使用](/tidb-lightning/tidb-lightning-physical-import-mode-usage.md)
      - [冲突检测](/tidb-lightning/tidb-lightning-physical-import-mode-usage.md#冲突数据检测)
      - [性能调优](/tidb-lightning/tidb-lightning-physical-import-mode-usage.md#性能调优)
    - 逻辑导入模式
      - [概述](/tidb-lightning/tidb-lightning-logical-import-mode.md)
      - [必要条件及限制](/tidb-lightning/tidb-lightning-logical-import-mode.md#必要条件)
      - [配置及使用](/tidb-lightning/tidb-lightning-logical-import-mode-usage.md)
      - [冲突检测](/tidb-lightning/tidb-lightning-logical-import-mode-usage.md#冲突数据检测)
      - [性能调优](/tidb-lightning/tidb-lightning-logical-import-mode-usage.md#性能调优)
    - [前置检查](/tidb-lightning/tidb-lightning-prechecks.md)
    - [表库过滤](/table-filter.md)
    - [断点续传](/tidb-lightning/tidb-lightning-checkpoints.md)
    - [并行导入](/tidb-lightning/tidb-lightning-distributed-import.md)
    - [可容忍错误](/tidb-lightning/tidb-lightning-error-resolution.md)
    - [故障处理](/tidb-lightning/troubleshoot-tidb-lightning.md)
    - 参考手册
      - [完整配置文件](/tidb-lightning/tidb-lightning-configuration.md)
      - [命令行参数](/tidb-lightning/tidb-lightning-command-line-full.md)
      - [监控告警](/tidb-lightning/monitor-tidb-lightning.md)
      - [Web 界面](/tidb-lightning/tidb-lightning-web-interface.md)
      - [FAQ](/tidb-lightning/tidb-lightning-faq.md)
      - [术语表](/tidb-lightning/tidb-lightning-glossary.md)
  - [Dumpling](/dumpling-overview.md)
  - TiCDC
    - [概述](/ticdc/ticdc-overview.md)
    - [安装部署与集群运维](/ticdc/deploy-ticdc.md)
    - Changefeed
      - [Changefeed 概述](/ticdc/ticdc-changefeed-overview.md)
      - 创建 Changefeed
        - [同步数据到 MySQL 兼容的数据库](/ticdc/ticdc-sink-to-mysql.md)
        - [同步数据到 Kafka](/ticdc/ticdc-sink-to-kafka.md)
        - [同步数据到 Pulsar](/ticdc/ticdc-sink-to-pulsar.md)
        - [同步数据到存储服务](/ticdc/ticdc-sink-to-cloud-storage.md)
      - [管理 Changefeed](/ticdc/ticdc-manage-changefeed.md)
      - [TiCDC 客户端鉴权](/ticdc/ticdc-client-authentication.md)
      - [日志过滤器](/ticdc/ticdc-filter.md)
      - [DDL 同步](/ticdc/ticdc-ddl.md)
      - [双向复制](/ticdc/ticdc-bidirectional-replication.md)
      - [单行数据正确性校验](/ticdc/ticdc-integrity-check.md)
      - [主从集群一致性读和数据校验](/ticdc/ticdc-upstream-downstream-check.md)
      - [拆分 UPDATE 事件行为说明](/ticdc/ticdc-split-update-behavior.md)
    - 监控告警
      - [基本监控指标](/ticdc/ticdc-summary-monitor.md)
      - [详细监控指标](/ticdc/monitor-ticdc.md)
      - [报警规则](/ticdc/ticdc-alert-rules.md)
    - 参考指南
      - [架构设计与原理](/ticdc/ticdc-architecture.md)
      - [TiCDC 数据同步能力详解](/ticdc/ticdc-data-replication-capabilities.md)
      - [TiCDC Server 配置参数](/ticdc/ticdc-server-config.md)
      - [TiCDC Changefeed 配置参数](/ticdc/ticdc-changefeed-config.md)
      - 输出数据协议
        - [TiCDC Avro Protocol](/ticdc/ticdc-avro-protocol.md)
        - [TiCDC Canal-JSON Protocol](/ticdc/ticdc-canal-json.md)
        - [TiCDC CSV Protocol](/ticdc/ticdc-csv.md)
        - [TiCDC Debezium Protocol](/ticdc/ticdc-debezium.md)
        - [TiCDC Open Protocol](/ticdc/ticdc-open-protocol.md)
        - [TiCDC Simple Protocol](/ticdc/ticdc-simple-protocol.md)
      - [TiCDC Open API v2](/ticdc/ticdc-open-api-v2.md)
      - [TiCDC Open API v1](/ticdc/ticdc-open-api.md)
      - TiCDC 数据消费
        - [基于 Avro 的 TiCDC 行数据 Checksum 校验](/ticdc/ticdc-avro-checksum-verification.md)
        - [Storage sink 消费程序编写指引](/ticdc/ticdc-storage-consumer-dev-guide.md)
      - [兼容性](/ticdc/ticdc-compatibility.md)
    - [故障处理](/ticdc/troubleshoot-ticdc.md)
    - [常见问题解答](/ticdc/ticdc-faq.md)
    - [术语表](/ticdc/ticdc-glossary.md)
  - TiDB Binlog
    - [概述](/tidb-binlog/tidb-binlog-overview.md)
    - [快速上手](/tidb-binlog/get-started-with-tidb-binlog.md)
    - [部署使用](/tidb-binlog/deploy-tidb-binlog.md)
    - [运维管理](/tidb-binlog/maintain-tidb-binlog-cluster.md)
    - [配置说明](/tidb-binlog/tidb-binlog-configuration-file.md)
      - [Pump](/tidb-binlog/tidb-binlog-configuration-file.md#pump)
      - [Drainer](/tidb-binlog/tidb-binlog-configuration-file.md#drainer)
    - [版本升级](/tidb-binlog/upgrade-tidb-binlog.md)
    - [监控告警](/tidb-binlog/monitor-tidb-binlog-cluster.md)
    - [增量恢复](/tidb-binlog/tidb-binlog-reparo.md)
    - [binlogctl 工具](/tidb-binlog/binlog-control.md)
    - [Kafka 自定义开发](/tidb-binlog/binlog-consumer-client.md)
    - [TiDB Binlog Relay Log](/tidb-binlog/tidb-binlog-relay-log.md)
    - [集群间双向同步](/tidb-binlog/bidirectional-replication-between-tidb-clusters.md)
    - [术语表](/tidb-binlog/tidb-binlog-glossary.md)
    - 故障诊断
      - [故障诊断](/tidb-binlog/troubleshoot-tidb-binlog.md)
      - [常见错误修复](/tidb-binlog/handle-tidb-binlog-errors.md)
    - [FAQ](/tidb-binlog/tidb-binlog-faq.md)
  - PingCAP Clinic 诊断服务
    - [概述](/clinic/clinic-introduction.md)
    - [快速上手](/clinic/quick-start-with-clinic.md)
    - [使用 PingCAP Clinic 诊断集群](/clinic/clinic-user-guide-for-tiup.md)
    - [使用 PingCAP Clinic 生成诊断报告](/clinic/clinic-report.md)
    - [采集 SQL 查询计划信息](/clinic/clinic-collect-sql-query-plan.md)
    - [数据采集说明](/clinic/clinic-data-instruction-for-tiup.md)
  - TiSpark
    - [TiSpark 用户指南](/tispark-overview.md)
  - sync-diff-inspector
    - [概述](/sync-diff-inspector/sync-diff-inspector-overview.md)
    - [不同库名或表名的数据校验](/sync-diff-inspector/route-diff.md)
    - [分库分表场景下的数据校验](/sync-diff-inspector/shard-diff.md)
    - [基于 DM 同步场景下的数据校验](/sync-diff-inspector/dm-diff.md)
  - TiProxy
    - [概述](/tiproxy/tiproxy-overview.md)
    - [配置文件](/tiproxy/tiproxy-configuration.md)
    - [命令行参数](/tiproxy/tiproxy-command-line-flags.md)
    - [监控指标](/tiproxy/tiproxy-grafana.md)
    - [API](/tiproxy/tiproxy-api.md)
    - [故障诊断](/tiproxy/troubleshoot-tiproxy.md)
    - [性能测试报告](/tiproxy/tiproxy-performance-test.md)
- 参考指南
  - 架构
    - [概述](/tidb-architecture.md)
    - [存储](/tidb-storage.md)
    - [计算](/tidb-computing.md)
    - [调度](/tidb-scheduling.md)
    - [TSO](/tso.md)
  - 存储引擎 TiKV
    - [TiKV 简介](/tikv-overview.md)
    - [RocksDB 简介](/storage-engine/rocksdb-overview.md)
    - [Titan 简介](/storage-engine/titan-overview.md)
    - [Titan 配置说明](/storage-engine/titan-configuration.md)
    - [Partitioned Raft KV](/partitioned-raft-kv.md)
  - 存储引擎 TiFlash
    - [TiFlash 简介](/tiflash/tiflash-overview.md)
    - [构建 TiFlash 副本](/tiflash/create-tiflash-replicas.md)
    - [使用 TiDB 读取 TiFlash](/tiflash/use-tidb-to-read-tiflash.md)
    - [使用 TiSpark 读取 TiFlash](/tiflash/use-tispark-to-read-tiflash.md)
    - [使用 MPP 模式](/tiflash/use-tiflash-mpp-mode.md)
    - [TiFlash 存算分离架构与 S3 支持](/tiflash/tiflash-disaggregated-and-s3.md)
    - [使用 FastScan 功能](/tiflash/use-fastscan.md)
    - [TiFlash 支持的计算下推](/tiflash/tiflash-supported-pushdown-calculations.md)
    - [TiFlash 查询结果物化](/tiflash/tiflash-results-materialization.md)
    - [TiFlash 延迟物化](/tiflash/tiflash-late-materialization.md)
    - [TiFlash 数据落盘](/tiflash/tiflash-spill-disk.md)
    - [TiFlash 数据校验](/tiflash/tiflash-data-validation.md)
    - [TiFlash MinTSO 调度器](/tiflash/tiflash-mintso-scheduler.md)
    - [TiFlash 兼容性说明](/tiflash/tiflash-compatibility.md)
    - [TiFlash Pipeline Model 执行模型](/tiflash/tiflash-pipeline-model.md)
  - TiDB 分布式执行框架
    - [TiDB 分布式执行框架介绍](/tidb-distributed-execution-framework.md)
    - [TiDB 全局排序](/tidb-global-sort.md)
  - [系统变量](/system-variables.md)
  - [服务器状态变量](/status-variables.md)
  - 配置文件参数
    - [tidb-server](/tidb-configuration-file.md)
    - [tikv-server](/tikv-configuration-file.md)
    - [tiflash-server](/tiflash/tiflash-configuration.md)
    - [pd-server](/pd-configuration-file.md)
  - CLI
    - [tikv-ctl](/tikv-control.md)
    - [pd-ctl](/pd-control.md)
    - [tidb-ctl](/tidb-control.md)
    - [pd-recover](/pd-recover.md)
    - [binlog-ctl](/tidb-binlog/binlog-control.md)
  - 命令行参数
    - [tidb-server](/command-line-flags-for-tidb-configuration.md)
    - [tikv-server](/command-line-flags-for-tikv-configuration.md)
    - [tiflash-server](/tiflash/tiflash-command-line-flags.md)
    - [pd-server](/command-line-flags-for-pd-configuration.md)
  - 监控指标
    - [Overview 面板](/grafana-overview-dashboard.md)
    - [Performance Overview 面板](/grafana-performance-overview-dashboard.md)
    - [TiDB 面板](/grafana-tidb-dashboard.md)
    - [PD 面板](/grafana-pd-dashboard.md)
    - [TiKV 面板](/grafana-tikv-dashboard.md)
    - [TiFlash 监控指标](/tiflash/monitor-tiflash.md)
    - [TiCDC 监控指标](/ticdc/monitor-ticdc.md)
    - [Resource Control 监控指标](/grafana-resource-control-dashboard.md)
  - 权限
    - [与 MySQL 安全特性差异](/security-compatibility-with-mysql.md)
    - [权限管理](/privilege-management.md)
    - [TiDB 用户账户管理](/user-account-management.md)
    - [TiDB 密码管理](/password-management.md)
    - [基于角色的访问控制](/role-based-access-control.md)
    - [TiDB 证书鉴权使用指南](/certificate-authentication.md)
  - SQL
    - SQL 语言结构和语法
      - 属性
        - [AUTO_INCREMENT](/auto-increment.md)
        - [AUTO_RANDOM](/auto-random.md)
        - [SHARD_ROW_ID_BITS](/shard-row-id-bits.md)
      - [字面值](/literal-values.md)
      - [Schema 对象名](/schema-object-names.md)
      - [关键字](/keywords.md)
      - [用户自定义变量](/user-defined-variables.md)
      - [表达式语法](/expression-syntax.md)
      - [注释语法](/comment-syntax.md)
    - SQL 语句
      - [概览](/sql-statements/sql-statement-overview.md)
      - [`ADD COLUMN`](/sql-statements/sql-statement-add-column.md)
      - [`ADD INDEX`](/sql-statements/sql-statement-add-index.md)
      - [`ADMIN`](/sql-statements/sql-statement-admin.md)
      - [`ADMIN CANCEL DDL`](/sql-statements/sql-statement-admin-cancel-ddl.md)
      - [`ADMIN CHECKSUM TABLE`](/sql-statements/sql-statement-admin-checksum-table.md)
      - [`ADMIN CHECK [TABLE|INDEX]`](/sql-statements/sql-statement-admin-check-table-index.md)
      - [`ADMIN CLEANUP`](/sql-statements/sql-statement-admin-cleanup.md)
      - [`ADMIN PAUSE DDL`](/sql-statements/sql-statement-admin-pause-ddl.md)
      - [`ADMIN RECOVER INDEX`](/sql-statements/sql-statement-admin-recover.md)
      - [`ADMIN RESUME DDL`](/sql-statements/sql-statement-admin-resume-ddl.md)
      - [`ADMIN [SET|SHOW|UNSET] BDR ROLE`](/sql-statements/sql-statement-admin-bdr-role.md)
      - [`ADMIN SHOW DDL [JOBS|QUERIES]`](/sql-statements/sql-statement-admin-show-ddl.md)
      - [`ALTER DATABASE`](/sql-statements/sql-statement-alter-database.md)
      - [`ALTER INDEX`](/sql-statements/sql-statement-alter-index.md)
      - [`ALTER INSTANCE`](/sql-statements/sql-statement-alter-instance.md)
      - [`ALTER PLACEMENT POLICY`](/sql-statements/sql-statement-alter-placement-policy.md)
      - [`ALTER RANGE`](/sql-statements/sql-statement-alter-range.md)
      - [`ALTER RESOURCE GROUP`](/sql-statements/sql-statement-alter-resource-group.md)
      - [`ALTER SEQUENCE`](/sql-statements/sql-statement-alter-sequence.md)
      - [`ALTER TABLE`](/sql-statements/sql-statement-alter-table.md)
      - [`ALTER TABLE COMPACT`](/sql-statements/sql-statement-alter-table-compact.md)
      - [`ALTER USER`](/sql-statements/sql-statement-alter-user.md)
      - [`ANALYZE TABLE`](/sql-statements/sql-statement-analyze-table.md)
      - [`BACKUP`](/sql-statements/sql-statement-backup.md)
      - [`BATCH`](/sql-statements/sql-statement-batch.md)
      - [`BEGIN`](/sql-statements/sql-statement-begin.md)
      - [`CALIBRATE RESOURCE`](/sql-statements/sql-statement-calibrate-resource.md)
      - [`CANCEL IMPORT JOB`](/sql-statements/sql-statement-cancel-import-job.md)
      - [`CHANGE COLUMN`](/sql-statements/sql-statement-change-column.md)
      - [`CHANGE DRAINER`](/sql-statements/sql-statement-change-drainer.md)
      - [`CHANGE PUMP`](/sql-statements/sql-statement-change-pump.md)
      - [`COMMIT`](/sql-statements/sql-statement-commit.md)
      - [`CREATE BINDING`](/sql-statements/sql-statement-create-binding.md)
      - [`CREATE DATABASE`](/sql-statements/sql-statement-create-database.md)
      - [`CREATE INDEX`](/sql-statements/sql-statement-create-index.md)
      - [`CREATE PLACEMENT POLICY`](/sql-statements/sql-statement-create-placement-policy.md)
      - [`CREATE RESOURCE GROUP`](/sql-statements/sql-statement-create-resource-group.md)
      - [`CREATE ROLE`](/sql-statements/sql-statement-create-role.md)
      - [`CREATE SEQUENCE`](/sql-statements/sql-statement-create-sequence.md)
      - [`CREATE TABLE LIKE`](/sql-statements/sql-statement-create-table-like.md)
      - [`CREATE TABLE`](/sql-statements/sql-statement-create-table.md)
      - [`CREATE USER`](/sql-statements/sql-statement-create-user.md)
      - [`CREATE VIEW`](/sql-statements/sql-statement-create-view.md)
      - [`DEALLOCATE`](/sql-statements/sql-statement-deallocate.md)
      - [`DELETE`](/sql-statements/sql-statement-delete.md)
      - [`DESC`](/sql-statements/sql-statement-desc.md)
      - [`DESCRIBE`](/sql-statements/sql-statement-describe.md)
      - [`DO`](/sql-statements/sql-statement-do.md)
      - [`DROP BINDING`](/sql-statements/sql-statement-drop-binding.md)
      - [`DROP COLUMN`](/sql-statements/sql-statement-drop-column.md)
      - [`DROP DATABASE`](/sql-statements/sql-statement-drop-database.md)
      - [`DROP INDEX`](/sql-statements/sql-statement-drop-index.md)
      - [`DROP PLACEMENT POLICY`](/sql-statements/sql-statement-drop-placement-policy.md)
      - [`DROP RESOURCE GROUP`](/sql-statements/sql-statement-drop-resource-group.md)
      - [`DROP ROLE`](/sql-statements/sql-statement-drop-role.md)
      - [`DROP SEQUENCE`](/sql-statements/sql-statement-drop-sequence.md)
      - [`DROP STATS`](/sql-statements/sql-statement-drop-stats.md)
      - [`DROP TABLE`](/sql-statements/sql-statement-drop-table.md)
      - [`DROP USER`](/sql-statements/sql-statement-drop-user.md)
      - [`DROP VIEW`](/sql-statements/sql-statement-drop-view.md)
      - [`EXECUTE`](/sql-statements/sql-statement-execute.md)
      - [`EXPLAIN ANALYZE`](/sql-statements/sql-statement-explain-analyze.md)
      - [`EXPLAIN`](/sql-statements/sql-statement-explain.md)
      - [`FLASHBACK CLUSTER`](/sql-statements/sql-statement-flashback-cluster.md)
      - [`FLASHBACK DATABASE`](/sql-statements/sql-statement-flashback-database.md)
      - [`FLASHBACK TABLE`](/sql-statements/sql-statement-flashback-table.md)
      - [`FLUSH PRIVILEGES`](/sql-statements/sql-statement-flush-privileges.md)
      - [`FLUSH STATUS`](/sql-statements/sql-statement-flush-status.md)
      - [`FLUSH TABLES`](/sql-statements/sql-statement-flush-tables.md)
      - [`GRANT <privileges>`](/sql-statements/sql-statement-grant-privileges.md)
      - [`GRANT <role>`](/sql-statements/sql-statement-grant-role.md)
      - [`IMPORT INTO`](/sql-statements/sql-statement-import-into.md)
      - [`INSERT`](/sql-statements/sql-statement-insert.md)
      - [`KILL`](/sql-statements/sql-statement-kill.md)
      - [`LOAD DATA`](/sql-statements/sql-statement-load-data.md)
      - [`LOAD STATS`](/sql-statements/sql-statement-load-stats.md)
      - [`LOCK STATS`](/sql-statements/sql-statement-lock-stats.md)
      - [`[LOCK|UNLOCK] TABLES`](/sql-statements/sql-statement-lock-tables-and-unlock-tables.md)
      - [`MODIFY COLUMN`](/sql-statements/sql-statement-modify-column.md)
      - [`PREPARE`](/sql-statements/sql-statement-prepare.md)
      - [`QUERY WATCH`](/sql-statements/sql-statement-query-watch.md)
      - [`RECOVER TABLE`](/sql-statements/sql-statement-recover-table.md)
      - [`RENAME INDEX`](/sql-statements/sql-statement-rename-index.md)
      - [`RENAME TABLE`](/sql-statements/sql-statement-rename-table.md)
      - [`RENAME USER`](/sql-statements/sql-statement-rename-user.md)
      - [`REPLACE`](/sql-statements/sql-statement-replace.md)
      - [`RESTORE`](/sql-statements/sql-statement-restore.md)
      - [`REVOKE <privileges>`](/sql-statements/sql-statement-revoke-privileges.md)
      - [`REVOKE <role>`](/sql-statements/sql-statement-revoke-role.md)
      - [`ROLLBACK`](/sql-statements/sql-statement-rollback.md)
      - [`SAVEPOINT`](/sql-statements/sql-statement-savepoint.md)
      - [`SELECT`](/sql-statements/sql-statement-select.md)
      - [`SET DEFAULT ROLE`](/sql-statements/sql-statement-set-default-role.md)
      - [`SET [NAMES|CHARACTER SET]`](/sql-statements/sql-statement-set-names.md)
      - [`SET PASSWORD`](/sql-statements/sql-statement-set-password.md)
      - [`SET RESOURCE GROUP`](/sql-statements/sql-statement-set-resource-group.md)
      - [`SET ROLE`](/sql-statements/sql-statement-set-role.md)
      - [`SET TRANSACTION`](/sql-statements/sql-statement-set-transaction.md)
      - [`SET <variable>`](/sql-statements/sql-statement-set-variable.md)
      - [`SHOW [BACKUPS|RESTORES]`](/sql-statements/sql-statement-show-backups.md)
      - [`SHOW ANALYZE STATUS`](/sql-statements/sql-statement-show-analyze-status.md)
      - [`SHOW BINDINGS`](/sql-statements/sql-statement-show-bindings.md)
      - [`SHOW BUILTINS`](/sql-statements/sql-statement-show-builtins.md)
      - [`SHOW CHARACTER SET`](/sql-statements/sql-statement-show-character-set.md)
      - [`SHOW COLLATION`](/sql-statements/sql-statement-show-collation.md)
      - [`SHOW COLUMN_STATS_USAGE`](/sql-statements/sql-statement-show-column-stats-usage.md)
      - [`SHOW COLUMNS FROM`](/sql-statements/sql-statement-show-columns-from.md)
      - [`SHOW CONFIG`](/sql-statements/sql-statement-show-config.md)
      - [`SHOW CREATE PLACEMENT POLICY`](/sql-statements/sql-statement-show-create-placement-policy.md)
      - [`SHOW CREATE RESOURCE GROUP`](/sql-statements/sql-statement-show-create-resource-group.md)
      - [`SHOW CREATE SEQUENCE`](/sql-statements/sql-statement-show-create-sequence.md)
      - [`SHOW CREATE TABLE`](/sql-statements/sql-statement-show-create-table.md)
      - [`SHOW CREATE DATABASE`](/sql-statements/sql-statement-show-create-database.md)
      - [`SHOW CREATE USER`](/sql-statements/sql-statement-show-create-user.md)
      - [`SHOW DATABASES`](/sql-statements/sql-statement-show-databases.md)
      - [`SHOW DRAINER STATUS`](/sql-statements/sql-statement-show-drainer-status.md)
      - [`SHOW ENGINES`](/sql-statements/sql-statement-show-engines.md)
      - [`SHOW ERRORS`](/sql-statements/sql-statement-show-errors.md)
      - [`SHOW FIELDS FROM`](/sql-statements/sql-statement-show-fields-from.md)
      - [`SHOW GRANTS`](/sql-statements/sql-statement-show-grants.md)
      - [`SHOW IMPORT JOB`](/sql-statements/sql-statement-show-import-job.md)
      - [`SHOW INDEXES`](/sql-statements/sql-statement-show-indexes.md)
      - [`SHOW MASTER STATUS`](/sql-statements/sql-statement-show-master-status.md)
      - [`SHOW PLACEMENT`](/sql-statements/sql-statement-show-placement.md)
      - [`SHOW PLACEMENT FOR`](/sql-statements/sql-statement-show-placement-for.md)
      - [`SHOW PLACEMENT LABELS`](/sql-statements/sql-statement-show-placement-labels.md)
      - [`SHOW PLUGINS`](/sql-statements/sql-statement-show-plugins.md)
      - [`SHOW PRIVILEGES`](/sql-statements/sql-statement-show-privileges.md)
      - [`SHOW PROCESSLIST`](/sql-statements/sql-statement-show-processlist.md)
      - [`SHOW PROFILES`](/sql-statements/sql-statement-show-profiles.md)
      - [`SHOW PUMP STATUS`](/sql-statements/sql-statement-show-pump-status.md)
      - [`SHOW SCHEMAS`](/sql-statements/sql-statement-show-schemas.md)
      - [`SHOW STATS_BUCKETS`](/sql-statements/sql-statement-show-stats-buckets.md)
      - [`SHOW STATS_HEALTHY`](/sql-statements/sql-statement-show-stats-healthy.md)
      - [`SHOW STATS_HISTOGRAMS`](/sql-statements/sql-statement-show-stats-histograms.md)
      - [`SHOW STATS_LOCKED`](/sql-statements/sql-statement-show-stats-locked.md)
      - [`SHOW STATS_META`](/sql-statements/sql-statement-show-stats-meta.md)
      - [`SHOW STATS_TOPN`](/sql-statements/sql-statement-show-stats-topn.md)
      - [`SHOW STATUS`](/sql-statements/sql-statement-show-status.md)
      - [`SHOW TABLE NEXT_ROW_ID`](/sql-statements/sql-statement-show-table-next-rowid.md)
      - [`SHOW TABLE REGIONS`](/sql-statements/sql-statement-show-table-regions.md)
      - [`SHOW TABLE STATUS`](/sql-statements/sql-statement-show-table-status.md)
      - [`SHOW TABLES`](/sql-statements/sql-statement-show-tables.md)
      - [`SHOW VARIABLES`](/sql-statements/sql-statement-show-variables.md)
      - [`SHOW WARNINGS`](/sql-statements/sql-statement-show-warnings.md)
      - [`SHUTDOWN`](/sql-statements/sql-statement-shutdown.md)
      - [`SPLIT REGION`](/sql-statements/sql-statement-split-region.md)
      - [`START TRANSACTION`](/sql-statements/sql-statement-start-transaction.md)
      - [`TABLE`](/sql-statements/sql-statement-table.md)
      - [`TRACE`](/sql-statements/sql-statement-trace.md)
      - [`TRUNCATE`](/sql-statements/sql-statement-truncate.md)
      - [`UNLOCK STATS`](/sql-statements/sql-statement-unlock-stats.md)
      - [`UPDATE`](/sql-statements/sql-statement-update.md)
      - [`USE`](/sql-statements/sql-statement-use.md)
      - [`WITH`](/sql-statements/sql-statement-with.md)
    - 数据类型
      - [数据类型概述](/data-type-overview.md)
      - [数据类型默认值](/data-type-default-values.md)
      - [数值类型](/data-type-numeric.md)
      - [日期和时间类型](/data-type-date-and-time.md)
      - [字符串类型](/data-type-string.md)
      - [JSON 类型](/data-type-json.md)
    - 函数与操作符
      - [函数与操作符概述](/functions-and-operators/functions-and-operators-overview.md)
      - [表达式求值的类型转换](/functions-and-operators/type-conversion-in-expression-evaluation.md)
      - [操作符](/functions-and-operators/operators.md)
      - [控制流程函数](/functions-and-operators/control-flow-functions.md)
      - [字符串函数](/functions-and-operators/string-functions.md)
      - [数值函数与操作符](/functions-and-operators/numeric-functions-and-operators.md)
      - [日期和时间函数](/functions-and-operators/date-and-time-functions.md)
      - [位函数和操作符](/functions-and-operators/bit-functions-and-operators.md)
      - [Cast 函数和操作符](/functions-and-operators/cast-functions-and-operators.md)
      - [加密和压缩函数](/functions-and-operators/encryption-and-compression-functions.md)
      - [锁函数](/functions-and-operators/locking-functions.md)
      - [信息函数](/functions-and-operators/information-functions.md)
      - JSON 函数
        - [概览](/functions-and-operators/json-functions.md)
        - [创建 JSON 的函数](/functions-and-operators/json-functions/json-functions-create.md)
        - [搜索 JSON 的函数](/functions-and-operators/json-functions/json-functions-search.md)
        - [修改 JSON 的函数](/functions-and-operators/json-functions/json-functions-modify.md)
        - [返回 JSON 的函数](/functions-and-operators/json-functions/json-functions-return.md)
        - [JSON 效用函数](/functions-and-operators/json-functions/json-functions-utility.md)
        - [聚合 JSON 的函数](/functions-and-operators/json-functions/json-functions-aggregate.md)
      - [GROUP BY 聚合函数](/functions-and-operators/aggregate-group-by-functions.md)
      - [GROUP BY 修饰符](/functions-and-operators/group-by-modifier.md)
      - [窗口函数](/functions-and-operators/window-functions.md)
      - [序列函数](/functions-and-operators/sequence-functions.md)
      - [效用函数](/functions-and-operators/utility-functions.md)
      - [其它函数](/functions-and-operators/miscellaneous-functions.md)
      - [TiDB 特有的函数](/functions-and-operators/tidb-functions.md)
      - [精度数学](/functions-and-operators/precision-math.md)
      - [集合运算](/functions-and-operators/set-operators.md)
      - [下推到 TiKV 的表达式列表](/functions-and-operators/expressions-pushed-down.md)          
      - [Oracle 与 TiDB 函数和语法差异对照](/oracle-functions-to-tidb.md)
    - [聚簇索引](/clustered-indexes.md)
    - [约束](/constraints.md)
    - [生成列](/generated-columns.md)
    - [SQL 模式](/sql-mode.md)
    - [表属性](/table-attributes.md)
    - 事务
      - [事务概览](/transaction-overview.md)
      - [隔离级别](/transaction-isolation-levels.md)
      - [乐观事务](/optimistic-transaction.md)
      - [悲观事务](/pessimistic-transaction.md)
      - [非事务 DML 语句](/non-transactional-dml.md)
    - [视图](/views.md)
    - [分区表](/partitioned-table.md)
    - [临时表](/temporary-tables.md)
    - [缓存表](/cached-tables.md)
    - [外键约束](/foreign-key.md)
    - 字符集和排序规则
      - [概述](/character-set-and-collation.md)
      - [GBK](/character-set-gbk.md)
    - [Placement Rules in SQL](/placement-rules-in-sql.md)
    - 系统表
      - `mysql` Schema
        - [概述](/mysql-schema/mysql-schema.md)
        - [`user`](/mysql-schema/mysql-schema-user.md)
      - INFORMATION_SCHEMA
        - [概述](/information-schema/information-schema.md)
        - [`ANALYZE_STATUS`](/information-schema/information-schema-analyze-status.md)
        - [`CHECK_CONSTRAINTS`](/information-schema/information-schema-check-constraints.md)
        - [`CLIENT_ERRORS_SUMMARY_BY_HOST`](/information-schema/client-errors-summary-by-host.md)
        - [`CLIENT_ERRORS_SUMMARY_BY_USER`](/information-schema/client-errors-summary-by-user.md)
        - [`CLIENT_ERRORS_SUMMARY_GLOBAL`](/information-schema/client-errors-summary-global.md)
        - [`CHARACTER_SETS`](/information-schema/information-schema-character-sets.md)
        - [`CLUSTER_CONFIG`](/information-schema/information-schema-cluster-config.md)
        - [`CLUSTER_HARDWARE`](/information-schema/information-schema-cluster-hardware.md)
        - [`CLUSTER_INFO`](/information-schema/information-schema-cluster-info.md)
        - [`CLUSTER_LOAD`](/information-schema/information-schema-cluster-load.md)
        - [`CLUSTER_LOG`](/information-schema/information-schema-cluster-log.md)
        - [`CLUSTER_SYSTEMINFO`](/information-schema/information-schema-cluster-systeminfo.md)
        - [`COLLATIONS`](/information-schema/information-schema-collations.md)
        - [`COLLATION_CHARACTER_SET_APPLICABILITY`](/information-schema/information-schema-collation-character-set-applicability.md)
        - [`COLUMNS`](/information-schema/information-schema-columns.md)
        - [`DATA_LOCK_WAITS`](/information-schema/information-schema-data-lock-waits.md)
        - [`DDL_JOBS`](/information-schema/information-schema-ddl-jobs.md)
        - [`DEADLOCKS`](/information-schema/information-schema-deadlocks.md)
        - [`ENGINES`](/information-schema/information-schema-engines.md)
        - [`INSPECTION_RESULT`](/information-schema/information-schema-inspection-result.md)
        - [`INSPECTION_RULES`](/information-schema/information-schema-inspection-rules.md)
        - [`INSPECTION_SUMMARY`](/information-schema/information-schema-inspection-summary.md)
        - [`KEYWORDS`](/information-schema/information-schema-keywords.md)
        - [`KEY_COLUMN_USAGE`](/information-schema/information-schema-key-column-usage.md)
        - [`MEMORY_USAGE`](/information-schema/information-schema-memory-usage.md)
        - [`MEMORY_USAGE_OPS_HISTORY`](/information-schema/information-schema-memory-usage-ops-history.md)
        - [`METRICS_SUMMARY`](/information-schema/information-schema-metrics-summary.md)
        - [`METRICS_TABLES`](/information-schema/information-schema-metrics-tables.md)
        - [`PARTITIONS`](/information-schema/information-schema-partitions.md)
        - [`PLACEMENT_POLICIES`](/information-schema/information-schema-placement-policies.md)
        - [`PROCESSLIST`](/information-schema/information-schema-processlist.md)
        - [`REFERENTIAL_CONSTRAINTS`](/information-schema/information-schema-referential-constraints.md)
        - [`RESOURCE_GROUPS`](/information-schema/information-schema-resource-groups.md)
        - [`RUNAWAY_WATCHES`](/information-schema/information-schema-runaway-watches.md)
        - [`SCHEMATA`](/information-schema/information-schema-schemata.md)
        - [`SEQUENCES`](/information-schema/information-schema-sequences.md)
        - [`SESSION_VARIABLES`](/information-schema/information-schema-session-variables.md)
        - [`SLOW_QUERY`](/information-schema/information-schema-slow-query.md)
        - [`STATISTICS`](/information-schema/information-schema-statistics.md)
        - [`TABLES`](/information-schema/information-schema-tables.md)
        - [`TABLE_CONSTRAINTS`](/information-schema/information-schema-table-constraints.md)
        - [`TABLE_STORAGE_STATS`](/information-schema/information-schema-table-storage-stats.md)
        - [`TIDB_CHECK_CONSTRAINTS`](/information-schema/information-schema-tidb-check-constraints.md)
        - [`TIDB_HOT_REGIONS`](/information-schema/information-schema-tidb-hot-regions.md)
        - [`TIDB_HOT_REGIONS_HISTORY`](/information-schema/information-schema-tidb-hot-regions-history.md)
        - [`TIDB_INDEXES`](/information-schema/information-schema-tidb-indexes.md)
        - [`TIDB_INDEX_USAGE`](/information-schema/information-schema-tidb-index-usage.md)
        - [`TIDB_SERVERS_INFO`](/information-schema/information-schema-tidb-servers-info.md)
        - [`TIDB_TRX`](/information-schema/information-schema-tidb-trx.md)
        - [`TIFLASH_REPLICA`](/information-schema/information-schema-tiflash-replica.md)
        - [`TIFLASH_SEGMENTS`](/information-schema/information-schema-tiflash-segments.md)
        - [`TIFLASH_TABLES`](/information-schema/information-schema-tiflash-tables.md)
        - [`TIKV_REGION_PEERS`](/information-schema/information-schema-tikv-region-peers.md)
        - [`TIKV_REGION_STATUS`](/information-schema/information-schema-tikv-region-status.md)
        - [`TIKV_STORE_STATUS`](/information-schema/information-schema-tikv-store-status.md)
        - [`USER_ATTRIBUTES`](/information-schema/information-schema-user-attributes.md)
        - [`USER_PRIVILEGES`](/information-schema/information-schema-user-privileges.md)
        - [`VARIABLES_INFO`](/information-schema/information-schema-variables-info.md)
        - [`VIEWS`](/information-schema/information-schema-views.md)
      - [`METRICS_SCHEMA`](/metrics-schema.md)
      - PERFORMANCE_SCHEMA
        - [概述](/performance-schema/performance-schema.md)
        - [`SESSION_CONNECT_ATTRS`](/performance-schema/performance-schema-session-connect-attrs.md)
      - SYS
        - [概述](/sys-schema/sys-schema.md)
        - [`schema_unused_indexes`](/sys-schema/sys-schema-unused-indexes.md)
    - [元数据锁](/metadata-lock.md)
    - [TiDB 加速建表](/accelerated-table-creation.md)
  - [遥测](/telemetry.md)
  - [错误码](/error-codes.md)
  - [通过拓扑 label 进行副本调度](/schedule-replicas-by-topology-labels.md)
  - [外部存储服务的 URI 格式](/external-storage-uri.md)
- 常见问题解答 (FAQ)
  - [FAQ 汇总](/faq/faq-overview.md)
  - [产品 FAQ](/faq/tidb-faq.md)
  - [SQL FAQ](/faq/sql-faq.md)
  - [安装部署 FAQ](/faq/deploy-and-maintain-faq.md)
  - [迁移 FAQ](/faq/migration-tidb-faq.md)
  - [升级 FAQ](/faq/upgrade-faq.md)
  - [监控 FAQ](/faq/monitor-faq.md)
  - [集群管理 FAQ](/faq/manage-cluster-faq.md)
  - [高可用 FAQ](/faq/high-availability-faq.md)
  - [高可靠 FAQ](/faq/high-reliability-faq.md)
  - [备份恢复 FAQ](/faq/backup-and-restore-faq.md)
- 版本发布历史
  - [发布版本汇总](/releases/release-notes.md)
  - [版本发布时间线](/releases/release-timeline.md)
  - [TiDB 版本规则](/releases/versioning.md)
  - [版本周期支持策略](https://cn.pingcap.com/tidb-release-support-policy/)
  - [TiDB 离线包](/binary-package.md)
  - v8.1
    - [8.1.2](/releases/release-8.1.2.md)
    - [8.1.1](/releases/release-8.1.1.md)
    - [8.1.0](/releases/release-8.1.0.md)
  - v8.0
    - [8.0.0-DMR](/releases/release-8.0.0.md)
  - v7.6
    - [7.6.0-DMR](/releases/release-7.6.0.md)
  - v7.5
    - [7.5.6](/releases/release-7.5.6.md)
    - [7.5.5](/releases/release-7.5.5.md)
    - [7.5.4](/releases/release-7.5.4.md)
    - [7.5.3](/releases/release-7.5.3.md)
    - [7.5.2](/releases/release-7.5.2.md)
    - [7.5.1](/releases/release-7.5.1.md)
    - [7.5.0](/releases/release-7.5.0.md)
  - v7.4
    - [7.4.0-DMR](/releases/release-7.4.0.md)
  - v7.3
    - [7.3.0-DMR](/releases/release-7.3.0.md)
  - v7.2
    - [7.2.0-DMR](/releases/release-7.2.0.md)
  - v7.1
    - [7.1.6](/releases/release-7.1.6.md)
    - [7.1.5](/releases/release-7.1.5.md)
    - [7.1.4](/releases/release-7.1.4.md)
    - [7.1.3](/releases/release-7.1.3.md)
    - [7.1.2](/releases/release-7.1.2.md)
    - [7.1.1](/releases/release-7.1.1.md)
    - [7.1.0](/releases/release-7.1.0.md)
  - v7.0
    - [7.0.0-DMR](/releases/release-7.0.0.md)
  - v6.6
    - [6.6.0-DMR](/releases/release-6.6.0.md)
  - v6.5
    - [6.5.12](/releases/release-6.5.12.md)
    - [6.5.11](/releases/release-6.5.11.md)
    - [6.5.10](/releases/release-6.5.10.md)
    - [6.5.9](/releases/release-6.5.9.md)
    - [6.5.8](/releases/release-6.5.8.md)
    - [6.5.7](/releases/release-6.5.7.md)
    - [6.5.6](/releases/release-6.5.6.md)
    - [6.5.5](/releases/release-6.5.5.md)
    - [6.5.4](/releases/release-6.5.4.md)
    - [6.5.3](/releases/release-6.5.3.md)
    - [6.5.2](/releases/release-6.5.2.md)
    - [6.5.1](/releases/release-6.5.1.md)
    - [6.5.0](/releases/release-6.5.0.md)
  - v6.4
    - [6.4.0-DMR](/releases/release-6.4.0.md)
  - v6.3
    - [6.3.0-DMR](/releases/release-6.3.0.md)
  - v6.2
    - [6.2.0-DMR](/releases/release-6.2.0.md)
  - v6.1
    - [6.1.7](/releases/release-6.1.7.md)
    - [6.1.6](/releases/release-6.1.6.md)
    - [6.1.5](/releases/release-6.1.5.md)
    - [6.1.4](/releases/release-6.1.4.md)
    - [6.1.3](/releases/release-6.1.3.md)
    - [6.1.2](/releases/release-6.1.2.md)
    - [6.1.1](/releases/release-6.1.1.md)
    - [6.1.0](/releases/release-6.1.0.md)
  - v6.0
    - [6.0.0-DMR](/releases/release-6.0.0-dmr.md)
  - v5.4
    - [5.4.3](/releases/release-5.4.3.md)
    - [5.4.2](/releases/release-5.4.2.md)
    - [5.4.1](/releases/release-5.4.1.md)
    - [5.4.0](/releases/release-5.4.0.md)
  - v5.3
    - [5.3.4](/releases/release-5.3.4.md)
    - [5.3.3](/releases/release-5.3.3.md)
    - [5.3.2](/releases/release-5.3.2.md)
    - [5.3.1](/releases/release-5.3.1.md)
    - [5.3.0](/releases/release-5.3.0.md)
  - v5.2
    - [5.2.4](/releases/release-5.2.4.md)
    - [5.2.3](/releases/release-5.2.3.md)
    - [5.2.2](/releases/release-5.2.2.md)
    - [5.2.1](/releases/release-5.2.1.md)
    - [5.2.0](/releases/release-5.2.0.md)
  - v5.1
    - [5.1.5](/releases/release-5.1.5.md)
    - [5.1.4](/releases/release-5.1.4.md)
    - [5.1.3](/releases/release-5.1.3.md)
    - [5.1.2](/releases/release-5.1.2.md)
    - [5.1.1](/releases/release-5.1.1.md)
    - [5.1.0](/releases/release-5.1.0.md)
  - v5.0
    - [5.0.6](/releases/release-5.0.6.md)
    - [5.0.5](/releases/release-5.0.5.md)
    - [5.0.4](/releases/release-5.0.4.md)
    - [5.0.3](/releases/release-5.0.3.md)
    - [5.0.2](/releases/release-5.0.2.md)
    - [5.0.1](/releases/release-5.0.1.md)
    - [5.0 GA](/releases/release-5.0.0.md)
    - [5.0.0-rc](/releases/release-5.0.0-rc.md)
  - v4.0
    - [4.0.16](/releases/release-4.0.16.md)
    - [4.0.15](/releases/release-4.0.15.md)
    - [4.0.14](/releases/release-4.0.14.md)
    - [4.0.13](/releases/release-4.0.13.md)
    - [4.0.12](/releases/release-4.0.12.md)
    - [4.0.11](/releases/release-4.0.11.md)
    - [4.0.10](/releases/release-4.0.10.md)
    - [4.0.9](/releases/release-4.0.9.md)
    - [4.0.8](/releases/release-4.0.8.md)
    - [4.0.7](/releases/release-4.0.7.md)
    - [4.0.6](/releases/release-4.0.6.md)
    - [4.0.5](/releases/release-4.0.5.md)
    - [4.0.4](/releases/release-4.0.4.md)
    - [4.0.3](/releases/release-4.0.3.md)
    - [4.0.2](/releases/release-4.0.2.md)
    - [4.0.1](/releases/release-4.0.1.md)
    - [4.0 GA](/releases/release-4.0-ga.md)
    - [4.0.0-rc.2](/releases/release-4.0.0-rc.2.md)
    - [4.0.0-rc.1](/releases/release-4.0.0-rc.1.md)
    - [4.0.0-rc](/releases/release-4.0.0-rc.md)
    - [4.0.0-beta.2](/releases/release-4.0.0-beta.2.md)
    - [4.0.0-beta.1](/releases/release-4.0.0-beta.1.md)
    - [4.0.0-beta](/releases/release-4.0.0-beta.md)
  - v3.1
    - [3.1.2](/releases/release-3.1.2.md)
    - [3.1.1](/releases/release-3.1.1.md)
    - [3.1.0 GA](/releases/release-3.1.0-ga.md)
    - [3.1.0-rc](/releases/release-3.1.0-rc.md)
    - [3.1.0-beta.2](/releases/release-3.1.0-beta.2.md)
    - [3.1.0-beta.1](/releases/release-3.1.0-beta.1.md)
    - [3.1.0-beta](/releases/release-3.1.0-beta.md)
  - v3.0
    - [3.0.20](/releases/release-3.0.20.md)
    - [3.0.19](/releases/release-3.0.19.md)
    - [3.0.18](/releases/release-3.0.18.md)
    - [3.0.17](/releases/release-3.0.17.md)
    - [3.0.16](/releases/release-3.0.16.md)
    - [3.0.15](/releases/release-3.0.15.md)
    - [3.0.14](/releases/release-3.0.14.md)
    - [3.0.13](/releases/release-3.0.13.md)
    - [3.0.12](/releases/release-3.0.12.md)
    - [3.0.11](/releases/release-3.0.11.md)
    - [3.0.10](/releases/release-3.0.10.md)
    - [3.0.9](/releases/release-3.0.9.md)
    - [3.0.8](/releases/release-3.0.8.md)
    - [3.0.7](/releases/release-3.0.7.md)
    - [3.0.6](/releases/release-3.0.6.md)
    - [3.0.5](/releases/release-3.0.5.md)
    - [3.0.4](/releases/release-3.0.4.md)
    - [3.0.3](/releases/release-3.0.3.md)
    - [3.0.2](/releases/release-3.0.2.md)
    - [3.0.1](/releases/release-3.0.1.md)
    - [3.0 GA](/releases/release-3.0-ga.md)
    - [3.0.0-rc.3](/releases/release-3.0.0-rc.3.md)
    - [3.0.0-rc.2](/releases/release-3.0.0-rc.2.md)
    - [3.0.0-rc.1](/releases/release-3.0.0-rc.1.md)
    - [3.0.0-beta.1](/releases/release-3.0.0-beta.1.md)
    - [3.0.0-beta](/releases/release-3.0-beta.md)
  - v2.1
    - [2.1.19](/releases/release-2.1.19.md)
    - [2.1.18](/releases/release-2.1.18.md)
    - [2.1.17](/releases/release-2.1.17.md)
    - [2.1.16](/releases/release-2.1.16.md)
    - [2.1.15](/releases/release-2.1.15.md)
    - [2.1.14](/releases/release-2.1.14.md)
    - [2.1.13](/releases/release-2.1.13.md)
    - [2.1.12](/releases/release-2.1.12.md)
    - [2.1.11](/releases/release-2.1.11.md)
    - [2.1.10](/releases/release-2.1.10.md)
    - [2.1.9](/releases/release-2.1.9.md)
    - [2.1.8](/releases/release-2.1.8.md)
    - [2.1.7](/releases/release-2.1.7.md)
    - [2.1.6](/releases/release-2.1.6.md)
    - [2.1.5](/releases/release-2.1.5.md)
    - [2.1.4](/releases/release-2.1.4.md)
    - [2.1.3](/releases/release-2.1.3.md)
    - [2.1.2](/releases/release-2.1.2.md)
    - [2.1.1](/releases/release-2.1.1.md)
    - [2.1 GA](/releases/release-2.1-ga.md)
    - [2.1 RC5](/releases/release-2.1-rc.5.md)
    - [2.1 RC4](/releases/release-2.1-rc.4.md)
    - [2.1 RC3](/releases/release-2.1-rc.3.md)
    - [2.1 RC2](/releases/release-2.1-rc.2.md)
    - [2.1 RC1](/releases/release-2.1-rc.1.md)
    - [2.1 Beta](/releases/release-2.1-beta.md)
  - v2.0
    - [2.0.11](/releases/release-2.0.11.md)
    - [2.0.10](/releases/release-2.0.10.md)
    - [2.0.9](/releases/release-2.0.9.md)
    - [2.0.8](/releases/release-2.0.8.md)
    - [2.0.7](/releases/release-2.0.7.md)
    - [2.0.6](/releases/release-2.0.6.md)
    - [2.0.5](/releases/release-2.0.5.md)
    - [2.0.4](/releases/release-2.0.4.md)
    - [2.0.3](/releases/release-2.0.3.md)
    - [2.0.2](/releases/release-2.0.2.md)
    - [2.0.1](/releases/release-2.0.1.md)
    - [2.0](/releases/release-2.0-ga.md)
    - [2.0 RC5](/releases/release-2.0-rc.5.md)
    - [2.0 RC4](/releases/release-2.0-rc.4.md)
    - [2.0 RC3](/releases/release-2.0-rc.3.md)
    - [2.0 RC1](/releases/release-2.0-rc.1.md)
    - [1.1 Beta](/releases/release-1.1-beta.md)
    - [1.1 Alpha](/releases/release-1.1-alpha.md)
  - v1.0
    - [1.0](/releases/release-1.0-ga.md)
    - [Pre-GA](/releases/release-pre-ga.md)
    - [RC4](/releases/release-rc.4.md)
    - [RC3](/releases/release-rc.3.md)
    - [RC2](/releases/release-rc.2.md)
    - [RC1](/releases/release-rc.1.md)
- [术语表](/glossary.md)
